--- a/src/app/live-model/live-model.component.html
+++ b/src/app/live-model/live-model.component.html
@@ -4,12 +4,15 @@
     <button class="button" (click)="set_camera_address()">Submit</button>
 </div>
 
-<div id="live-video">
-    <video width="320" height="240" controls autoplay="autoplay">
-        <p>{{camera_link}}</p>
-        <source (src)="{camera_link}" type="video/mp4">
-      Your browser does not support the video tag.
-      </video> 
-</div>
+<h1>Live Video Stream</h1>
+<img id="videoStream" width="640" height="480">
+<script>
+  const videoElement = document.getElementById('videoStream');
 
-<img src="../../assets/sign_detected_image.png" alt="cant find image">
+  function updateVideoStream() {
+      videoElement.src = 'http://localhost:8000/'; // This is the root URL of your FastAPI application
+      setTimeout(updateVideoStream, 1000); // Update the image every 1 second
+  }
+
+  updateVideoStream();
+</script>
