--- a/src/app/live-model/live-model.component.html
+++ b/src/app/live-model/live-model.component.html
@@ -4,6 +4,8 @@
     <button class="button" (click)="set_camera_address()">Submit</button>
 </div>
 
+<hr>
+
 <div id="live-sign-recognition"> 
   <h1>Live Video Stream</h1>
   <img id="videoStream" width="640" height="480">
@@ -11,7 +13,7 @@
     const videoElement = document.getElementById('videoStream');
 
     function updateVideoStream() {
-        videoElement.src = 'http://localhost:8000/'; // This is the root URL of your FastAPI application
+        videoElement.src = 'http://localhost:8086/'; // This is the root URL of your FastAPI application
         setTimeout(updateVideoStream, 1000); // Update the image every 1 second
     }
 
@@ -19,6 +21,25 @@
   </script>
 </div>
 
+<hr>
+
 <div class="Video-Similarity">
-  
+  <p>{{status}}</p>
+  <button (click)="start_recording()">Start Recording</button>
+  <button (click)="stop_recording()">Stop Recording</button>
+
+  <p>{{tutorial_video_url}}</p>
+  <video controls width="640" height="480">
+    <source src="file:///home/abhijit/Feature-Based-Video-Similarity-Detection/data-collection-and-training-area/data/Faridpur_7.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+  <p>{{recorded_video_url}}</p>
+  <video width="320" height="240">
+    <source (src)="{recorded_video_url}" type="video/mp4">
+  Your browser does not support the video tag.
+  </video> 
+
+  <button (click)="calculate_video_similarity()">Calculate Video Similairty</button>
+  <p>{{video_similarity_score}}</p>
 </div>
