Tried the certificate one

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,10 @@
       <br><br>
       <h5 class="px-5">Bangla Sign Quest assists deaf and mute individuals in learning Bangla sign language through interactive video tutorials and activity recognition technology evaluation.</h5>
       <br><br><br>
-      <a routerLink="/quiz" class="btn-custom m-5">Take Quiz</a>
-      <a routerLink="/videos" class="btn-custom m-5">Courses</a>
+      <a routerLink="/login" class="btn-custom m-5">Get Started</a>
+      <!-- <a routerLink="/videos" class="btn-custom m-5">Courses</a> -->
       <br><br><br>
-      <a routerLink="/login" class="btn-custom mt-5">Become a Tutor!</a>
+      <!-- <a routerLink="/login" class="btn-custom mt-5">Become a Tutor!</a> -->
     </div>
     <div class="col-5">
       <img src="../../assets/sign-photo.jpg" alt="">
