--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -29,6 +29,36 @@
                 <label for="password">Password:</label>
                 <input type="password" class="form-control" name="password" [(ngModel)]="password">
               </div>
+              <div class="form-group">
+                <label>Choose Your Role:</label>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="role"
+                    id="studentRole"
+                    [(ngModel)]="selectedRole"
+                    value="student"
+                  >
+                  <label class="form-check-label" for="studentRole">
+                    Student
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="role"
+                    id="teacherRole"
+                    [(ngModel)]="selectedRole"
+                    value="teacher"
+                  >
+                  <label class="form-check-label" for="teacherRole">
+                    Teacher
+                  </label>
+                </div>
+              </div>
+              
               <button class="btn-reg" id="btnReg"(click)="registerUser()">Register</button>
             </form>
           </div>
