add dictionary and correspondinf images

--- a/src/app/word-detail/word-detail.component.html
+++ b/src/app/word-detail/word-detail.component.html
@@ -10,8 +10,8 @@
         <div>
           <strong>{{ selectedWord }}:</strong>
           <!-- Display the corresponding image here -->
-          <img [src]="getMeaning(selectedWord)" alt="{{ selectedWord }} meaning" style="max-width: 100%; height: auto;">
-        </div>
+          <img [src]="getImagePath()" alt="{{ selectedWord }} meaning" style="max-width: 100%; height: auto;">
+</div>
       </div>
     </div>
   </div>
