--- a/src/app/live-model/live-model.component.html
+++ b/src/app/live-model/live-model.component.html
@@ -1,45 +1,5 @@
 
-<div id="register-camera" class="container">
-    <input type="text" class="input" [(ngModel)]="camera_link">
-    <button class="button" (click)="set_camera_address()">Submit</button>
-</div>
-
-<hr>
-
-<div id="live-sign-recognition"> 
-  <h1>Live Video Stream</h1>
-  <img id="videoStream" width="640" height="480">
-  <script>
-    const videoElement = document.getElementById('videoStream');
-
-    function updateVideoStream() {
-        videoElement.src = 'http://localhost:8086/'; // This is the root URL of your FastAPI application
-        setTimeout(updateVideoStream, 1000); // Update the image every 1 second
-    }
-
-    updateVideoStream();
-  </script>
-</div>
-
-<hr>
-
-<div class="Video-Similarity">
-  <p>{{status}}</p>
-  <button (click)="start_recording()">Start Recording</button>
-  <button (click)="stop_recording()">Stop Recording</button>
-
-  <p>{{tutorial_video_url}}</p>
-  <video controls width="640" height="480">
-    <source src="file:///home/abhijit/Feature-Based-Video-Similarity-Detection/data-collection-and-training-area/data/Faridpur_7.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
-
-  <p>{{recorded_video_url}}</p>
-  <video width="320" height="240">
-    <source (src)="{recorded_video_url}" type="video/mp4">
-  Your browser does not support the video tag.
-  </video> 
-
-  <button (click)="calculate_video_similarity()">Calculate Video Similairty</button>
-  <p>{{video_similarity_score}}</p>
-</div>
+<app-register-camera-model> </app-register-camera-model>
+<app-live-sign-recognition></app-live-sign-recognition>
+<app-video-similarity>  </app-video-similarity>
+<app-practice-mimicking-with-tutorials> </app-practice-mimicking-with-tutorials>
